# Cybel

./: README.md
JSBuild/src/: backend.js  electron.main.js  embeddings.js  hindsight.js  index.html  index.js  instance_engine.js  local_inference.js  main.css  model_hub.js  model_switcher.js  oauth_code.html  package-lock.json  package.json  preload.js  renderer.js  vector.index  vestauth.js
JSBuild/src/haskell/futhark-micro-main/: README.md  main.hs  package.yaml  stack.yaml
JSBuild/src/haskell/futhark-micro-main/Lib/: FRPC.hs
JSBuild/src/haskell/futhark-micro-main/fut_src/: diff.fut
JSBuild/src/python/: custom_embeddings_generator.py  download_model.py  fast_graphrag.py  js_interface.py  newbie_pipeline.py  oqtopus_graph_generator.py  oqtopus_merkle_pygad.py  python_runner.js  requirements.txt  sparc_server.py  tensor_ops.py  thrml_graph_generator.py  thrml_merkle_pygad.py
JSBuild/src/python/demos/: oqtopus_graph_generator.py  thrml_graph_generator_demo.py  thrml_graph_generator_groq_demo.py  thrml_merkle_demo.py  thrml_pgm_test.py  thrml_toy_tests.py
JSBuild/src/python/sparc3d_sdf/scripts/: sdf.py
JSBuild/src/scripts/: build_faiss.js  build_faiss_wsl.sh  build_node_banana.sh
JSBuild/src/scripts/haskell/: tf_hs_example.hs
JSBuild/src/verso/Anvil/: .gitignore  .pre-commit-config.yaml  .saguaro.rules  .saguaro.rules.draft  AGENTS.md  GEMINI.md  README.md  ROADMAP_PROGRAM_SYNTHESIS.md  anvil.py  comparative_bear_50_improved_v2.md  comparative_fleet.pid  conftest.py  history.json  main.py  requirements-dev.txt  requirements.txt  ruff.toml  run_queries.sh  saguaro_deep_analysis_roadmap.md  setup.py  sitecustomize.py  test_prompts.md
JSBuild/src/verso/Anvil/.granite/: MASTER_UPGRADE_PLAN.md  events.db  loop_performance.json  memory.md  perf_metrics.json
JSBuild/src/verso/Anvil/Saguaro/: CMakeLists.txt  DEPRECATED.md  __init__.py  __main__.py  test_tf.cc
JSBuild/src/verso/Anvil/aes_visuals/: README.md
JSBuild/src/verso/Anvil/agents/: master.py  recovery.py  subagent.py  unified_master.py
JSBuild/src/verso/Anvil/anvil.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
JSBuild/src/verso/Anvil/audit/: .gitignore  __init__.py  evidence_capsule.py  granite_smoke.json  runtime_logging.py
JSBuild/src/verso/Anvil/benchmarks/: almf_retrieval_replay_benchmark.py  coconut_ablation.py  comparative_suite.json  comprehensive_benchmark.py  continuous_qsg_benchmark.py  disparate_relations_benchmark.py  gpu_test.py  gpu_verification.py  native_kernel_microbench.py  native_qsg_benchmark.py  qsg_benchmark.py  run_comparative_suite.py  saguaro_index_audit.py  simd_benchmark.py  synthesis_suite.py  test_impact_perf.py
JSBuild/src/verso/Anvil/campaign_sample_docs/: Anvil Campaign.md  HighNoon Campaign.md
JSBuild/src/verso/Anvil/cli/: command_registry.py  history.py  progress_dashboard.py  renderer.py  repl.py  task_view.py
JSBuild/src/verso/Anvil/comparative_reports/: comparative_1773473506_3304bbfe.md  comparative_1773473631_3304bbfe.md  comparative_1773473739_5c47c5a3.md  comparative_1773476708_8c4c87b7.md  comparative_1773476778_62534115.md
JSBuild/src/verso/Anvil/config/: mcp_servers.yaml  settings.py
JSBuild/src/verso/Anvil/core/: adaptive_context.py  agent.py  agent_loop_helpers.py  agent_mode.py  agent_tool_helpers.py  anvil_db.py  approval.py  backup.py  chat_loop_enterprise.py  checkpoint.py  config_manager.py  context.py  context_compression.py  corrections.py  delegation.py  enhanced_tool_calling_loop.py  env_manager.py  error_recovery.py  evidence_builder.py  hallucination_gate.py  loop_router.py  model_manager.py  multi_agent_gatherer.py  multi_file_refactor.py  ollama_client.py  parallel_executor.py  performance_metrics.py  performance_monitor.py  pipelines.py  proactive_context.py  progressive_context.py  project_context.py  quantization_guide.py  response_utils.py  runtime_control_policy.py  safety.py  serialization.py  session_manager.py  skills.py  smart_context_manager.py  (+12 more)
JSBuild/src/verso/Anvil/core/native/: CMakeLists.txt  amx_kernels.cpp  amx_kernels.h  build_native.sh  capability_registry.py  coconut_bridge.cpp  coconut_bridge.py  cpu_math_runtime.cpp  cpu_math_runtime.h  cpu_speculative_decode.py  engine.py  fast_attention.cpp  fast_attention_wrapper.py  fast_math.h  ffi_boundary_manifest.py  hybrid_ssm.py  incremental_kv_cache.py  interleave_weights.cpp  latent_steering.py  llama_kv_compat.py  mmap_weight_store.py  model_graph.cpp  model_graph_wrapper.py  model_suspender.py  native_kv_cache.cpp  native_kv_cache_wrapper.py  native_ops.py  native_qsg_engine.py  native_tokenizer.cpp  native_tokenizer.py  numa_allocator.cpp  numa_allocator.h  numa_topology.cpp  numa_topology.h  paged_kv_cache.py  parallel_decode.py  parallel_generation.py  qsg_forward.py  qsg_kv_cache.py  qsg_parallel_kernels.cpp  (+17 more)
JSBuild/src/verso/Anvil/core/native/build-cmake-20260311/: CMakeCache.txt  Makefile  cmake_install.cmake
JSBuild/src/verso/Anvil/core/native/split/backends/granite4_tinyh/: backend_module.cpp
JSBuild/src/verso/Anvil/core/native/split/backends/qwen35/: backend_module.cpp
JSBuild/src/verso/Anvil/core/native/split/compat/: native_ops_compat.cpp
JSBuild/src/verso/Anvil/core/native/split/kernels/: amx_kernels_wrap.cpp  fast_attention_wrap.cpp  interleave_weights_wrap.cpp  numa_allocator_wrap.cpp  numa_topology_wrap.cpp  qsg_parallel_kernels_wrap.cpp  qsg_state_kernels_wrap.cpp  quantized_matmul_wrap.cpp  simd_ops_wrap.cpp  tensor_decomposition_kernels_wrap.cpp  thread_config_wrap.cpp  tinyblas_kernels_wrap.cpp
JSBuild/src/verso/Anvil/core/native/split/runtime/core/: coconut_bridge_wrap.cpp  cpu_math_runtime_wrap.cpp  model_graph_wrap.cpp  native_kv_cache_wrap.cpp  native_tokenizer_wrap.cpp  unicode_data_wrap.cpp  unicode_wrap.cpp
JSBuild/src/verso/Anvil/docs/: REPO_WALKTHROUGH.md  agent_workflows.md  architecture_overview.md  build_and_deploy.md  layout.md  (+15 more)
JSBuild/src/verso/Verso_Fut/: KernelLib.fut  fut_test.py
PythonBuild/frontend/: Cybel Dashboard.html
PythonBuild/frontend/assets/: neural_net_bg.html
(+2013 files in other folders)
